[gd_scene load_steps=4 format=3 uid="uid://5c0jarbajc4l"]

[ext_resource type="Texture2D" uid="uid://b4uayug0m7igq" path="res://assets/rice.png" id="1_yrhgn"]
[ext_resource type="Script" path="res://scripts/dish_serving.gd" id="2_503bn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sekum"]
radius = 100.0
height = 206.667

[node name="Rice" type="Sprite2D"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_yrhgn")
script = ExtResource("2_503bn")

[node name="Area2D" type="Area2D" parent="."]
y_sort_enabled = true
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sekum")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
